--- a/IDM-18-04/Tokunova/css/style.css
+++ b/IDM-18-04/Tokunova/css/style.css
@@ -22,6 +22,11 @@ body {
 	font-family:Tahoma;
 	text-shadow:1px 1px 0 #FFFFFF;
 	}
+.t5 {
+	font-family:Tahoma, Times, "Times New Roman", "serif";
+	font-size:18px;
+	line-height:1.5em;
+}
 .d1 {
 	background:url(../img/github.png);
 	margin:10px 0;
@@ -83,7 +88,7 @@ body {
 	background-color:#FFA9FA;
 	margin:0 -40px -56px -40px;
 	border-radius:0 0 7px 7px;
-	box-shadow: 0 0 25px rgba(0, 0, 0, 0.1), inset 0 0 1px rgba(255, 255, 255, 0.6);
+	box-shadow:0 0 25px rgba(0, 0, 0, 0.1), inset 0 0 1px rgba(255, 255, 255, 0.6);
 }
 @import url("https://fonts.googleapis.com/css?family=Roboto");
 
@@ -116,6 +121,11 @@ nav ul li a {
 
 nav ul li a:hover {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1), inset 0 0 1px rgba(255, 255, 255, 0.6);
+  background: rgba(255, 255, 255, 0.1);
+  color: rgba(0, 0, 0, 0.7);
+}
+.z {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1), inset 0 0 1px rgba(255, 255, 255, 0.95);
   background: rgba(255, 255, 255, 0.1);
   color: rgba(0, 0, 0, 0.7);
 }
