--- a/IDM-18-05/Nomerova/default.css
+++ b/IDM-18-05/Nomerova/default.css
@@ -87,7 +87,7 @@ a img {
 	height: 600px;
 	width: 35%;
 	float: right;
-	background:url(girl.png) no-repeat center;
+	background:url(images/girl.png) no-repeat center;
 	background-size: width:100%;
 }
 
